test(executions): migrate handler tests off Micronaut onto testkit fakes
Extends the testkit with in-memory state-store fakes (execution, queued,
delay, SLA monitor, concurrency limit — the lock() fake runs its callback
synchronously and persists the result, mirroring the JDBC SELECT FOR
UPDATE cycle), a recording keyed dispatch queue, and a passthrough Tracer.
The harness now wires all 8 real message handlers over the fakes and
exposes them plus every side-effect channel.

All 7 Micronaut-based handler tests (@KestraTest/@MicronautTest + H2 +
@MockBean) are now plain JUnit over the harness: the whole handler suite
runs in ~1.5s with no database and no ApplicationContext. Queue-emission
assertions are synchronous against recording fakes instead of
CompletableFuture subscriptions with 5s/1s timeouts.

The two assertion-free smoke tests now assert real outcomes:
- MultipleConditionEventMessageHandlerTest asserts the ExecutionCommand
  emission (incl. terminal-state preservation) and the no-emission case.
- SubflowExecutionEndMessageHandlerTest asserts the SubflowExecutionResult
  emission; its old happy path silently passed through an exception-
  swallowing branch. Similarly, SubflowExecutionResultMessageHandlerTest's
  happy path was exercising the failure branch (execution seeded without
  taskruns) — it now tests the real join branch, including saved outputs.